--- a/index.ipynb
+++ b/index.ipynb
@@ -39,7 +39,8 @@
    "outputs": [],
    "source": [
     "def attendance(advertising):\n",
-    "    x = adve"
+    "    x = advertising\n",
+    "    "
    ]
   },
   {
