--- a/index.ipynb
+++ b/index.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "def attendance(advertising):\n",
     "    x = advertising\n",
-    "    y = adver"
+    "    y = advertising*3"
    ]
   },
   {
