automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -41,7 +41,8 @@
     "def attendance(advertising):\n",
     "    x = advertising\n",
     "    m = 3/2\n",
-    "    y = "
+    "    y = m*advertising + 0\n",
+    "    return "
    ]
   },
   {
