--- a/index.ipynb
+++ b/index.ipynb
@@ -102,7 +102,10 @@
    "outputs": [],
    "source": [
     "def attendance_with_friends(advertising):\n",
-    "    pass"
+    "    x = advertising\n",
+    "    m = 3/2\n",
+    "    y = m*advertising + 0\n",
+    "    return y"
    ]
   },
   {
