--- a/index.ipynb
+++ b/index.ipynb
@@ -283,7 +283,8 @@
    "outputs": [],
    "source": [
     "def m_b_data(m, b, x_values):\n",
-    "    y = list(map(lambda value: m*x_value+b))"
+    "    y = list(map(lambda value: m*x_value+b))\n",
+    "    return {}"
    ]
   },
   {
