--- a/index.ipynb
+++ b/index.ipynb
@@ -284,7 +284,7 @@
    "source": [
     "def m_b_data(m, b, x_values):\n",
     "    y = list(map(lambda value: m*x_value+b))\n",
-    "    return {}"
+    "    return {'x': }"
    ]
   },
   {
