--- a/index.ipynb
+++ b/index.ipynb
@@ -283,7 +283,7 @@
    "outputs": [],
    "source": [
     "def m_b_data(m, b, x_values):\n",
-    "    y = list(map(lambda value: m*x_value+b))\n",
+    "    y_values = list(map(lambda value: m*x_value+b))\n",
     "    return {'x': x_values, 'y': y_values}"
    ]
   },
