--- a/index.ipynb
+++ b/index.ipynb
@@ -321,7 +321,7 @@
    "outputs": [],
    "source": [
     "def m_b_trace(m, b, x_values, mode = 'line', name = 'line function'):\n",
-    "    trace = {'mode'}\n",
+    "    trace = {'mode': mode, 'name': name}\n",
     "    \n",
     "    data = m_b_data(m, b, x_values)\n",
     "    "
