--- a/index.ipynb
+++ b/index.ipynb
@@ -316,22 +316,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def m_b_trace(m, b, x_values, mode = 'line', name = 'line function'):\n",
     "    trace = {'mode': mode, 'name': name}\n",
     "    data = m_b_data(m, b, x_values)\n",
-    "    \n",
+    "    trace.update(data)\n",
+    "    return trace\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'mode': 'line',\n",
+       " 'name': 'line function',\n",
+       " 'x': [0, 50, 100],\n",
+       " 'y': [20.0, 95.0, 170.0]}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "m_b_trace(1.5, 20, [0, 50, 100]) \n",
     "# {'mode': 'line', 'name': 'line function', 'x': [0, 50, 100], 'y': [20.0, 95.0, 170.0]}"
