--- a/index.ipynb
+++ b/index.ipynb
@@ -418,7 +418,7 @@
    ],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
-    "    m = abs((second_show['attendance']-first_show['attendance'])/({second_show['attendance']/first_show['attendance']))  "
+    "    m = abs((second_show['attendance']-first_show['attendance'])/({second_show['budget']/first_show['attendanc']))  "
    ]
   },
   {
