--- a/index.ipynb
+++ b/index.ipynb
@@ -409,8 +409,8 @@
    "outputs": [],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
-    "    m = abs((second_show['attendance']-first_show['attendance'])/(second_show['budget']/first_show['budget']))  \n",
-    "    return"
+    "    m = ((second_show['attendance']-first_show['attendance'])/(second_show['budget']/first_show['budget']))  \n",
+    "    return m"
    ]
   },
   {
