--- a/index.ipynb
+++ b/index.ipynb
@@ -404,27 +404,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "def marginal_return_on_budget(first_show, second_show):\n",
-    "    m = (second_show['attendance']-first_show['attendance'])/(second_show['budget']/first_show['budget'])\n",
+    "    m = (second_show['attendance']-first_show['attendance'])/(second_show['budget']-first_show['budget'])\n",
     "    return m"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "150.0"
+       "1.5"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,9 +435,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'budget': 200, 'attendance': 400}"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "first_show"
    ]
@@ -451,9 +462,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.3333333333333333"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "imaginary_third_show = {'budget': 300, 'attendance': 500}\n",
     "imaginary_fourth_show = {'budget': 600, 'attendance': 900}\n",
