--- a/index.ipynb
+++ b/index.ipynb
@@ -576,7 +576,7 @@
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
-    "    m = (max(y_values))"
+    "    m = (max(y_values)-min(y_values))"
    ]
   },
   {
