--- a/index.ipynb
+++ b/index.ipynb
@@ -533,22 +533,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(1, 6), (4, 4), (6, 7)]"
+       "1"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sorted_points([4, 1, 6], [4, 6, 7])"
+    "sorted_points([4, 1, 6], [4, 6, 7])[0"
    ]
   },
   {
