--- a/index.ipynb
+++ b/index.ipynb
@@ -548,7 +548,7 @@
     }
    ],
    "source": [
-    "sorted_points([4, 1, 6], [4, 6, 7])[0"
+    "sorted_points([4, 1, 6], [4, 6, 7])"
    ]
   },
   {
@@ -576,7 +576,7 @@
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
-    "    m = (max(y_values)-min(y_values))"
+    "    m = (y_values"
    ]
   },
   {
