--- a/index.ipynb
+++ b/index.ipynb
@@ -576,7 +576,7 @@
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
-    "    m = (y_values"
+    "    m = (y_values[-1] - y_values[0])/"
    ]
   },
   {
