--- a/index.ipynb
+++ b/index.ipynb
@@ -571,17 +571,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "def slope(x_values, y_values):\n",
-    "    m = (y_values[-1] - y_values[0])/(x_values[-1]-x_va)"
+    "    m = (y_values[-1] - y_values[0])/(x_values[-1]-x_values[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
