--- a/index.ipynb
+++ b/index.ipynb
@@ -721,19 +721,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "def expected_value_for_line(m, b, x_value):\n",
-    "    y = m*x_value + b"
+    "    y = m*x_value + b\n",
+    "    return y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "250.0"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "expected_value_for_line(1.5, 100, 100) # 250"
    ]
