--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -884,7 +884,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plot([comedy_show_trace, trace_show_line])"
+    "# plot([comedy_show_trace, trace_show_line])"
    ]
   },
   {
